# polkafuzz

./: .gitmodules  DESIGN.md  README.md
polkafuzz_v1/: .gitignore  Cargo.toml  Makefile  README.md
polkafuzz_v1/fuzz/: Cargo.toml
polkafuzz_v1/fuzz/fuzz_targets/: chain_spec_libafl.rs  chain_spec_libfuzzer.rs  decode_babenextepoch_libafl.rs  decode_babenextepoch_libfuzzer.rs  decode_babepredigest_libafl.rs  decode_babepredigest_libfuzzer.rs  decode_header_libafl.rs  decode_header_libfuzzer.rs  multiaddr_from_str_libafl.rs  multiaddr_from_str_libfuzzer.rs  multiaddr_libafl.rs  multiaddr_libfuzzer.rs  multiaddr_try_from_libafl.rs  multiaddr_try_from_libfuzzer.rs  multihash_from_bytes_libafl.rs  multihash_from_bytes_libfuzzer.rs  peerid_from_bytes_libafl.rs  peerid_from_bytes_libfuzzer.rs  publickey_from_protobuf_encoding_libafl.rs  publickey_from_protobuf_encoding_libfuzzer.rs
polkafuzz_v1/libs/gfuzz/: gfuzz.go  libgfuzz.h
polkafuzz_v1/libs/gossamer/: Cargo.toml  build.rs
polkafuzz_v1/libs/gossamer/src/: gossamer.rs  lib.rs
polkafuzz_v1/libs/smoldot/: Cargo.toml
polkafuzz_v1/libs/smoldot/src/: lib.rs  smoldot.rs
polkafuzz_v1/libs/substrate/: Cargo.toml
polkafuzz_v1/libs/substrate/src/: lib.rs  substrate.rs
polkafuzz_v1/src/: lib.rs  main.rs
polkafuzz_v2/: .gitignore  Cargo.toml  Makefile  README.md
polkafuzz_v2/fuzzers/gossamer/: libfuzzer.go
polkafuzz_v2/fuzzers/smoldot/: Cargo.toml
polkafuzz_v2/fuzzers/smoldot/fuzz/: Cargo.toml
polkafuzz_v2/fuzzers/substrate/: Cargo.toml
polkafuzz_v2/src/: main.rs
reproducer/: .gitignore  Cargo.toml  Makefile  README.md
reproducer/libs/glib/: glib.go  libglib.h
reproducer/libs/gossamer/: Cargo.toml  build.rs
reproducer/libs/gossamer/src/: lib.rs
reproducer/libs/smoldot/: Cargo.toml
reproducer/libs/smoldot/src/: lib.rs
reproducer/libs/substrate/: Cargo.toml
reproducer/libs/substrate/src/: lib.rs
reproducer/src/: main.rs
(+39 files in other folders)
