[package]
name = "reproducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
clap = "2.34.0"
failure = "0.1.8"
smoldot-lib = { path = "libs/smoldot" }
substrate-lib = { path = "libs/substrate" }
gossamer-lib = { path = "libs/gossamer" }
