[package]
name = "substrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sc-chain-spec = { path = "../../../clients/substrate/client/chain-spec"}