[package]
name = "substrate-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
multiaddr = { version = "0.14.0" }
multihash = { version = "0.16" }
sc-chain-spec = { path = "../../../clients/substrate/client/chain-spec"}
sp-consensus-babe = { path = "../../../clients/substrate/primitives/consensus/babe" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
libp2p = { version = "0.49.0" }
sp-runtime = { path = "../../../clients/substrate/primitives/runtime" }
